--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">GINcose</string>
+
+    <string name="transmitter_id">Transmitter ID:</string>
+    <string name="transmitter_id_box">Transmitter ID</string>
 </resources>
