Added icon images. Bug fixes. Fixed unpairing issue. UI initial commit. Updated styles.xml.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,10 @@
 
     <string name="transmitter_id">Transmitter ID:</string>
     <string name="transmitter_id_box">Transmitter ID</string>
+
+    <string name="calibrate_text">Calibrate</string>
+    <string name="stop_sensor_text">Stop Sensor</string>
+
+    <string name="drawer_open">drawer_open</string>
+    <string name="drawer_close">drawer_close</string>
 </resources>
